// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderWrapper should render the loader with custom props 1`] = `
<div
  className="bg-white bg-opacity-80 w-full h-full top-0 absolute"
>
  <div
    className="loader loader-undefined loader-active custom-wrapper"
  >
    <div
      className="loader-inner pacman custom-inner"
    >
      <div
        style={
          {
            "backgroundColor": "red",
          }
        }
      />
      <div
        style={
          {
            "backgroundColor": "red",
          }
        }
      />
      <div
        style={
          {
            "backgroundColor": "red",
          }
        }
      />
      <div
        style={
          {
            "backgroundColor": "red",
          }
        }
      />
      <div
        style={
          {
            "backgroundColor": "red",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`LoaderWrapper should render the loader with default props when active is true 1`] = `
<div
  className="bg-white bg-opacity-80 w-full h-full top-0 absolute"
>
  <div
    className="loader loader-undefined loader-active vh-center"
  >
    <div
      className="loader-inner ball-pulse-sync"
    >
      <div
        style={
          {
            "backgroundColor": "#0d6efd",
          }
        }
      />
      <div
        style={
          {
            "backgroundColor": "#0d6efd",
          }
        }
      />
      <div
        style={
          {
            "backgroundColor": "#0d6efd",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`LoaderWrapper should render while fetching 1`] = `
<div
  className="bg-white bg-opacity-80 w-full h-full top-0 absolute"
>
  <div
    className="loader loader-undefined loader-active vh-center"
  >
    <div
      className="loader-inner ball-pulse-sync"
    >
      <div
        style={
          {
            "backgroundColor": "#0d6efd",
          }
        }
      />
      <div
        style={
          {
            "backgroundColor": "#0d6efd",
          }
        }
      />
      <div
        style={
          {
            "backgroundColor": "#0d6efd",
          }
        }
      />
    </div>
  </div>
</div>
`;
